--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -18,7 +18,7 @@
 .logo {
   font-weight: bold;
   font-size: 30px;
-  color: darkblue;
+  color: #064051;
   cursor: pointer;
 }
 
@@ -27,7 +27,7 @@
   align-items: center;
   gap: 10px;
   margin-right: 10px;
-  color: #555;
+  color: #064051;
   cursor: pointer;
 }
 
@@ -45,8 +45,8 @@
   border-radius: 50%;
   top: -5px;
   right: -5px;
-  background-color: red;
-  color: white;
+  background-color: #c34d4d;
+  color: #fff;
   font-size: 10px;
 }
 
