--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -1,14 +1,15 @@
 .sidebar {
-  flex: 1;
+  flex: 1 1;
   height: calc(100vh - 50px);
-  background-color: #f5f5f2;
+  background-color: #064051;
   position: sticky;
   top: 50px;
+  border-radius: 0px 15px 15px 0px;
 }
 
 .sidebarWrapper {
   padding: 20px;
-  color: #064051;
+  color: #fff;
 }
 
 .sidebarMenu {
@@ -16,8 +17,8 @@
 }
 
 .sidebarTitle {
-  font-size: 16px;
-  color: #064051;
+  font-size: 18px;
+  color: #fff;
 }
 
 .sidebarList {
@@ -36,8 +37,9 @@
 
 .sidebarListItem.active,
 .sidebarListItem:hover {
-  background-color: #a9a9a9;
-  color: #fff;
+  background-color: #a4bac0;
+  color: #064051;
+  font-weight: 600;
 }
 
 .sidebarIcon {
