components: chart,pages & widgetSm

--- a/src/components/featuredInfo/featuredInfo.css
+++ b/src/components/featuredInfo/featuredInfo.css
@@ -10,8 +10,7 @@
   padding: 30px;
   border-radius: 10px;
   cursor: pointer;
-  background-color: #064051;
-  /* background-color: #a9a9a9; */
+  background-color: #031f29;
   color: #fff;
 
   -webkit-box-shadow: 4px 4px 8px 2px #a9a9a9;
